--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "google-map-react": "^1.1.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-geocode": "^0.2.0",
     "react-scripts": "3.1.2"
   },
   "scripts": {
@@ -33,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000/"
 }
