--- a/client/package.json
+++ b/client/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "https://secret-sea-51339.herokuapp.com/"
 }
