--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "server": "nodemon server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
+  "engines": {
+    "node": "10.16.0"
+  },
   "author": "Rafael Monroy",
   "license": "ISC",
   "dependencies": {
